<resources>
    <string name="app_name">Weather</string>
    <string name="title_activity_weather">WeatherActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="find_tickets">find tickets</string>
    <string name="no_city">No city</string>
    <string name="r">R</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">Search</string>
    <string name="back">Back</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="baby">Baby</string>
    <string name="zero">0</string>
    <string name="day_of_week">Day of week</string>
    <string name="forward">Forward</string>
    <string name="swipe_here">swipe here to change day</string>
</resources>
